fix: Makefile and typos

--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -15,7 +15,7 @@
           La curiosidad y aprender cosas nuevas han sido dos de mis motivaciones principales, tanto en mi carrera profesional
           como en la vida en general. Me gusta compartir mi conocimiento con los demás, de la forma más abierta posible; todo
           el mundo tiene cosas que enseñar y de las que aprender. Me considero proactivo, no tengo problema en dar y recibir
-          feedback. La mayoría del conocimiento actual que tengo lo he adquirido de forma autodidacta.
+          feedback. La mayoría del conocimiento actual que poseo lo he adquirido de forma autodidacta.
         </p>
         <p>
           Mi experiencia en otros sectores pueden aportar valor a cualquier proyecto. Comencé mi vida profesional en el
