--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
-          <p class="card-text">Me encargue de desarrolle las interacciones de varios objetos y sistemas.</p>
+          <p class="card-text">Me encargue de desarrollar las interacciones de varios objetos y sistemas.</p>
           <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fa fa-itch-io"></i> Itch.io</a>
         </div>
       </div>
