--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#aboutMe">Sobre mi <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#aboutMe">Sobre mí <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#workExperience">Experiencia Laboral</a>
+          <a class="nav-link" href="#workExperience">Experiencia Profesional</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#projects">Proyectos</a>
