feat: adds smooth scrolling to navbar

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -72,7 +72,9 @@
         <div class="card-body">
           <h3 class="card-title"><a href="https://laginc.itch.io/sweets-dreams" class="text-info">Sweets Dreams</a></h3>
           <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
-          <p class="card-text">Desarrolle los sistemas de control de fases, control de patrones y reutilización de obstáculos.</p>
+          <p class="card-text">
+            Desarrolle los sistemas de control de fases, control de patrones y reutilización de obstáculos.
+          </p>
           <a href="https://laginc.itch.io/sweets-dreams" class="card-link text-info"><i class="fa fa-itch-io"></i> Itch.io</a>
         </div>
       </div>
