--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -6,13 +6,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#aboutMe">Sobre mí <span class="sr-only">(current)</span></a>
+          <a class="nav-link scroll" href="#aboutMe">Sobre mí <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#workExperience">Experiencia Profesional</a>
+          <a class="nav-link scroll" href="#workExperience">Experiencia Profesional</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Proyectos</a>
+          <a class="nav-link scroll" href="#projects">Proyectos</a>
         </li>
       </ul>
     </div>
