deps: update awesome font icons

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -75,7 +75,7 @@
           <p class="card-text">
             Desarrolle los sistemas de control de fases, control de patrones y reutilización de obstáculos.
           </p>
-          <a href="https://laginc.itch.io/sweets-dreams" class="card-link text-info"><i class="fa fa-itch-io"></i> Itch.io</a>
+          <a href="https://laginc.itch.io/sweets-dreams" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
         </div>
       </div>
       <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
@@ -86,7 +86,7 @@
           <h3 class="card-title"><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
           <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
           <p class="card-text">Me encargue de desarrollar las interacciones de varios objetos y sistemas.</p>
-          <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fa fa-itch-io"></i> Itch.io</a>
+          <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
         </div>
       </div>
       <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
@@ -94,8 +94,8 @@
           <h3 class="card-title">GDT - Visual Novel Mod</h3>
           <h6 class="card-subtitle mb-2 text-muted">Mod</h6>
           <p class="card-text">Mod para el videojuego Game Dev Tycoon. Añade nuevos temas e investigaciones.</p>
-          <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="card-link text-info"><i class="fa fa-steam"></i> Steam</a>
-          <a href="https://github.com/LuqueDaniel/gdt-visualnovel-mod" class="card-link text-info"><i class="fa fa-github"></i> Repositorio</a>
+          <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="card-link text-info"><i class="fab fa-steam"></i> Steam</a>
+          <a href="https://github.com/LuqueDaniel/gdt-visualnovel-mod" class="card-link text-info"><i class="fab fa-github"></i> Repositorio</a>
         </div>
       </div>
     </div>
