fix: typo and projects order

--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -10,22 +10,22 @@
         <div class="mt-5 text-justify">
           <p>
             Desarrollador apasionado por los videojuegos y la tecnología. Desde pequeño los videojuegos han formado
-            parte de mi vida, el <strong>primer juego que desarrollé fue un hack rom de Pokémon</strong>. Desde entonces he querido desarrollar
+            parte de mi vida. Con 15 años <strong>desarrollé mi primer videojuego, un hack rom de Pokémon</strong>.
+            Desde entonces he querido desarrollar
             videojuegos, para <strong>compartir con otros parte de esa magia que me cautivó</strong>.
           </p>
           <p>
             La <strong>curiosidad y aprender cosas nuevas han sido dos de mis motivaciones principales</strong>, tanto en mi carrera profesional
             como en la vida en general. Gran parte del <strong>conocimiento que poseo lo he adquirido de forma autodidact</strong>a.
             Me encanta compartir conocimiento con los demás, de la forma más abierta posible; todo
-            el mundo tiene cosas que enseñar y de las que aprender. Siempre busco la mejor manera de aportar
-            en cada proyecto en el que participo, dando el 100%.
+            el mundo tiene cosas que enseñar y de las que aprender.
           </p>
           <p>
             <strong>Mi experiencia en otros sectores puede aportar valor a cualquier proyecto</strong>. Comencé mi vida profesional en el
             sector administrativo como contable, esa experiencia me ayudó a comprender de forma real,
             la <strong>importancia de la organización</strong> a
             la hora de trabajar. También he trabajado desarrollando y manteniendo software de gestión para empresas.
-            Hasta que <strong>finalmente, decidí dedicarme a lo que durante tanto tiempo había sido mi hobby, la programación y el desarrollo de videojuegos</strong>.
+            Hasta que <strong>finalmente decidí dedicarme a lo que durante tanto tiempo había sido mi hobby: la programación y el desarrollo de videojuegos</strong>.
           </p>
         </div>
         <hr class="my-4">
