--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -53,7 +53,7 @@
         <h4>Apress | Marzo 2019 - Mayo 2019</h4>
         <p>
           Revisión técnica de los distintos aspectos del libro
-          <a href="https://www.apress.com/gp/book/9781484249192">Game Development with Ren'Py</a>. Para producir
+          <a href="https://www.apress.com/gp/book/9781484249192" class="text-info">Game Development with Ren'Py</a>. Para producir
           un material de calidad y libre de errores o imprecisiones. Además de
           expandir el contenido del libro asesorando al autor.
         </p>
@@ -67,6 +67,17 @@
     <div class="">
       <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
         <div class="card-header">
+          <img src="theme/images/treasure_hunt.png" alt="" class="card-img">
+        </div>
+        <div class="card-body">
+          <h3 class="card-title"><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
+          <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
+          <p class="card-text">Me encargue de desarrollar las interacciones de varios objetos y sistemas.</p>
+          <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
+        </div>
+      </div>
+      <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
+        <div class="card-header">
           <img src="theme/images/sweets_dreams.jpg" alt="" class="card-img">
         </div>
         <div class="card-body">
@@ -76,17 +87,6 @@
             Desarrolle los sistemas de control de fases, control de patrones y reutilización de obstáculos.
           </p>
           <a href="https://laginc.itch.io/sweets-dreams" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-        </div>
-      </div>
-      <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
-        <div class="card-header">
-          <img src="theme/images/treasure_hunt.png" alt="" class="card-img">
-        </div>
-        <div class="card-body">
-          <h3 class="card-title"><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
-          <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
-          <p class="card-text">Me encargue de desarrollar las interacciones de varios objetos y sistemas.</p>
-          <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
         </div>
       </div>
       <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
