--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -2,7 +2,66 @@
 {% block content %}
 {% include "navbar.html" %}
 {% include "header.html" %}
-<section id="workExperience" class="col py-5 bg-dark text-light">
+<section id="projects" class="col py-5 bg-dark text-light">
+  <div class="container">
+    <h2 class="display-4 text-center pb-5">Proyectos</h2>
+    <div class="row mb-4">
+      <div class="col-lg-auto">
+        <img src="theme/images/never_stop.jpg" alt="">
+      </div>
+      <div class="col">
+        <h3><a href="https://ricardorg.itch.io/nothing-can-stop-you" class="text-info">Nothing can stop you!</a></h3>
+        <h6 class="mb-2 text-muted">Game Jam</h6>
+        <p>
+          En este proyecto fui responsable de implementar el game loop (sistema de fases, spawn
+          y reutilización de objetos) y el sistema de audio.
+        </p>
+        <a href="https://ricardorg.itch.io/nothing-can-stop-you" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-lg-auto">
+        <img src="theme/images/treasure_hunt.png" alt="">
+      </div>
+      <div class="col">
+        <h3 class=""><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
+        <h6 class="mb-2 text-muted">Game jam</h6>
+        <p>
+          Me encargue de desarrollar las interacciones de varios objetos y sistemas: antorchas e iluminación, monedas, puertas. Corrección de bugs en la UI y la IA de los enemigos.
+        </p>
+        <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-lg-auto">
+        <img src="theme/images/sweets_dreams.jpg" alt="">
+      </div>
+      <div class="col">
+        <h3><a href="https://laginc.itch.io/sweets-dreams" class="text-info">Sweets Dreams</a></h3>
+        <h6 class="mb-2 text-muted">Game jam</h6>
+        <p>
+          Desarrollé los sistemas de control de fases, control de patrones y reutilización de obstáculos.
+        </p>
+        <a href="https://laginc.itch.io/sweets-dreams" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-lg-auto">
+        <img src="theme/images/vn_mod.jpg" alt="">
+      </div>
+      <div class="col">
+        <h3><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="text-info">GTD Visual Novel Mod</a></h3>
+        <h6 class="mb-2 text-muted">Mod</h6>
+        <p>
+          Mod para el videojuego Game Dev Tycoon. Añade nuevos temas e investigaciones.
+        </p>
+        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="card-link text-info"><i class="fab fa-steam"></i> Steam</a>
+        <a href="https://github.com/LuqueDaniel/gdt-visualnovel-mod" class="card-link text-info"><i class="fab fa-github"></i> Repositorio</a>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="workExperience" class="col py-5 bg-secondary text-light">
   <div class="container">
     <h2 class="display-4 text-center pb-5">Experiencia Profesional</h2>
     <div>
@@ -31,7 +90,7 @@
           <li>Migración entre versiones de Odoo (10.0, 11.0 y 12.0).</li>
           <li>Migración de datos de softwares anteriores a la implantación de Odoo.</li>
           <li>Formar a los compañeros en el uso de Odoo y su flujo de trabajo.</li>
-          <li>Desarrollo de módulos para cubrir las necesidades especificas./li>
+          <li>Desarrollo de módulos para cubrir las necesidades especificas.</li>
           <li>Administración de servidores Linux.</li>
         </ul>
       </div>
@@ -57,46 +116,6 @@
           un material de calidad y libre de errores o imprecisiones. Además de
           expandir el contenido del libro asesorando al autor.
         </p>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="projects" class="col py-5 bg-secondary text-light">
-  <div class="container">
-    <h2 class="display-4 text-center pb-5">Proyectos</h2>
-    <div class="">
-      <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
-        <div class="card-header">
-          <img src="theme/images/treasure_hunt.png" alt="" class="card-img">
-        </div>
-        <div class="card-body">
-          <h3 class="card-title"><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
-          <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
-          <p class="card-text">Me encargue de desarrollar las interacciones de varios objetos y sistemas.</p>
-          <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-        </div>
-      </div>
-      <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
-        <div class="card-header">
-          <img src="theme/images/sweets_dreams.jpg" alt="" class="card-img">
-        </div>
-        <div class="card-body">
-          <h3 class="card-title"><a href="https://laginc.itch.io/sweets-dreams" class="text-info">Sweets Dreams</a></h3>
-          <h6 class="card-subtitle mb-2 text-muted">Game jam</h6>
-          <p class="card-text">
-            Desarrolle los sistemas de control de fases, control de patrones y reutilización de obstáculos.
-          </p>
-          <a href="https://laginc.itch.io/sweets-dreams" class="card-link text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-        </div>
-      </div>
-      <div class="card flex-row flex-wrap mb-2 bg-dark border-info">
-        <div class="card-body">
-          <h3 class="card-title">GDT - Visual Novel Mod</h3>
-          <h6 class="card-subtitle mb-2 text-muted">Mod</h6>
-          <p class="card-text">Mod para el videojuego Game Dev Tycoon. Añade nuevos temas e investigaciones.</p>
-          <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="card-link text-info"><i class="fab fa-steam"></i> Steam</a>
-          <a href="https://github.com/LuqueDaniel/gdt-visualnovel-mod" class="card-link text-info"><i class="fab fa-github"></i> Repositorio</a>
-        </div>
       </div>
     </div>
   </div>
