update: disable CV download button

--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -29,7 +29,7 @@
           </p>
         </div>
         <hr class="my-4">
-        <a class="btn btn-info btn-lg" href="#" role="button">Descargar CV</a>
+        <!--<a class="btn btn-info btn-lg" href="#" role="button">Descargar CV</a>-->
         <div class="my-4">
           <a href="{{ SOCIAL['Email'] }}" target="_blank" id="email" class="btn-social"><i class="fa fa-envelope"></i></a>
           <a href="{{ SOCIAL['Linkedin'] }}" target="_blank" id="linkedin" class="btn-social"><i class="fa fa-linkedin"></i></a>
