Update: adds skills and videos

--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -10,7 +10,7 @@
         <div class="mt-5 text-justify">
           <p>
             Desarrollador apasionado por los videojuegos y la tecnología. Desde pequeño los videojuegos han formado
-            parte de mi vida. Con 15 años <strong>desarrollé mi primer videojuego un hack rom de Pokémon</strong>.
+            parte de mi vida. Con 15 años <strong>desarrollé mi primer videojuego, un hack rom de Pokémon</strong>.
             Desde entonces he querido desarrollar
             videojuegos, para <strong>compartir con otros parte de esa magia que me cautivó</strong>.
           </p>
