--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -2,122 +2,10 @@
 {% block content %}
 {% include "navbar.html" %}
 {% include "header.html" %}
-<section id="projects" class="col py-5 bg-dark text-light">
-  <div class="container">
-    <h2 class="display-4 text-center pb-5">Proyectos</h2>
-    <div class="row mb-4">
-      <div class="col-lg-auto">
-        <img src="theme/images/never_stop.jpg" alt="">
-      </div>
-      <div class="col">
-        <h3><a href="https://ricardorg.itch.io/nothing-can-stop-you" class="text-info">Nothing can stop you!</a></h3>
-        <h6 class="mb-2 text-muted">Game Jam</h6>
-        <p>
-          En este proyecto fui responsable de implementar el game loop (sistema de fases, spawn
-          y reutilización de objetos) y el sistema de audio.
-        </p>
-        <a href="https://ricardorg.itch.io/nothing-can-stop-you" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-lg-auto">
-        <img src="theme/images/treasure_hunt.png" alt="">
-      </div>
-      <div class="col">
-        <h3 class=""><a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info">Don't let them loot you!</a></h3>
-        <h6 class="mb-2 text-muted">Game jam</h6>
-        <p>
-          Me encargue de desarrollar las interacciones de varios objetos y sistemas: antorchas e iluminación, monedas, puertas. Corrección de bugs en la UI y la IA de los enemigos.
-        </p>
-        <a href="https://kyplim.itch.io/dont-let-them-loot-you" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-lg-auto">
-        <img src="theme/images/sweets_dreams.jpg" alt="">
-      </div>
-      <div class="col">
-        <h3><a href="https://laginc.itch.io/sweets-dreams" class="text-info">Sweets Dreams</a></h3>
-        <h6 class="mb-2 text-muted">Game jam</h6>
-        <p>
-          Desarrollé los sistemas de control de fases, control de patrones y reutilización de obstáculos.
-        </p>
-        <a href="https://laginc.itch.io/sweets-dreams" class="text-info"><i class="fab fa-itch-io"></i> Itch.io</a>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-lg-auto">
-        <img src="theme/images/vn_mod.jpg" alt="">
-      </div>
-      <div class="col">
-        <h3><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="text-info">GTD Visual Novel Mod</a></h3>
-        <h6 class="mb-2 text-muted">Mod</h6>
-        <p>
-          Mod para el videojuego Game Dev Tycoon. Añade nuevos temas e investigaciones.
-        </p>
-        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=299122114" class="card-link text-info"><i class="fab fa-steam"></i> Steam</a>
-        <a href="https://github.com/LuqueDaniel/gdt-visualnovel-mod" class="card-link text-info"><i class="fab fa-github"></i> Repositorio</a>
-      </div>
-    </div>
-  </div>
+<section id="skills" class="col py-5 bg-dark text-light">
+{% include "skills.html" %}
 </section>
-<section id="workExperience" class="col py-5 bg-secondary text-light">
-  <div class="container">
-    <h2 class="display-4 text-center pb-5">Experiencia Profesional</h2>
-    <div>
-      <h3 class="font-weight-bold">Unity Developer</h3>
-      <div class="pl-4">
-        <h4>2018 - Actualmente</h4>
-        <p>
-          He trabajado en el desarrollo de varios videojuegos, prototipos, y game jams (PC, movil, y WebGL), tanto en solitario
-          como en distintos equipos. Principalmente como <strong>gameplay programmer y UI programmer</strong>.
-          Con distintos motores, pero especialmente con Unity.
-        </p>
-      </div>
-    </div>
-    <div>
-      <h3 class="font-weight-bold">Desarrollador e implantador Odoo</h3>
-      <div class="pl-4">
-        <h4>ACT Brideco | Julio 2017 - Actualmente</h4>
-        <p>
-          Implantación y desarrollo de una solución centralizada y online para cubrir las necesidades de
-          gestión de las empresas del grupo. <strong>Logrando así una mejora efectiva del flujo de trabajo de todos
-          los departamentos</strong>.
-        </p>
-        <p>Otras tareas realizadas:</p>
-        <ul>
-          <li>Implantación y mantenimiento de Odoo (3 empresas del grupo).</li>
-          <li>Migración entre versiones de Odoo (10.0, 11.0 y 12.0).</li>
-          <li>Migración de datos de softwares anteriores a la implantación de Odoo.</li>
-          <li>Formar a los compañeros en el uso de Odoo y su flujo de trabajo.</li>
-          <li>Desarrollo de módulos para cubrir las necesidades especificas.</li>
-          <li>Administración de servidores Linux.</li>
-        </ul>
-      </div>
-    </div>
-    <div>
-      <h3 class="font-weight-bold">Desarrollador Python, Consultor Odoo y Adminsitrador de servidores Linux</h3>
-      <div class="pl-4">
-        <h4>TICRED Consulting | Noviembre 2017 - Enero 2020</h4>
-        <p>
-          Realizado trabajos esporádicos: administración de servidores Linux, desarrollo de un scraper en Python para
-          extraer información de productos de Amazon, consultoría de Odoo y desarrollo de addons para adaptar
-          Odoo a las necesidades de sus clientes.
-        </p>
-      </div>
-    </div>
-    <div>
-      <h3 class="font-weight-bold">Technical Reviewer</h3>
-      <div class="pl-4">
-        <h4>Apress | Marzo 2019 - Mayo 2019</h4>
-        <p>
-          Revisión técnica de los distintos aspectos del libro
-          <a href="https://www.apress.com/gp/book/9781484249192" class="text-info">Game Development with Ren'Py</a>. Para producir
-          un material de calidad y libre de errores o imprecisiones. Además de
-          expandir el contenido del libro asesorando al autor.
-        </p>
-      </div>
-    </div>
-  </div>
+<section id="projects" class="col py-5 bg-light text-dark">
+{% include "projects.html" %}
 </section>
 {% endblock content %}
