--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -9,10 +9,10 @@
           <a class="nav-link scroll" href="#aboutMe">Sobre mí <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link scroll" href="#projects">Proyectos</a>
+          <a class="nav-link scroll" href="#skills">Habilidades</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link scroll" href="#workExperience">Experiencia Profesional</a>
+          <a class="nav-link scroll" href="#projects">Proyectos</a>
         </li>
       </ul>
     </div>
