update: v2021.1.1 template refactoring
- Refactor of project section
- Change style of projects links

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -3,9 +3,9 @@
 {% include "navbar.html" %}
 {% include "header.html" %}
 <section id="skills" class="col py-5 bg-dark text-light">
-{% include "skills.html" %}
+{% include "section_skills.html" %}
 </section>
 <section id="projects" class="col py-5 bg-light text-dark">
-{% include "projects.html" %}
+{% include "section_projects.html" %}
 </section>
 {% endblock content %}
