--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col" style="font-size: 1.05em;">
         <h1 class="display-3">{{ AUTHOR }}</h1>
-        <h2 class="display-5">{{ PROFESIONAL_TITLE }}</h2>
+        <h2 class="display-5">{{ PROFESIONAL_ROLE }}</h2>
         <div class="mt-5 text-justify">
           <p>
             Desarrollador apasionado por los videojuegos y la tecnología. Desde pequeño los videojuegos han formado
@@ -15,8 +15,8 @@
             videojuegos, para <strong>compartir con otros parte de esa magia que me cautivó</strong>.
           </p>
           <p>
-            La <strong>curiosidad y aprender cosas nuevas han sido dos de mis motivaciones principales</strong>, tanto en mi carrera profesional
-            como en la vida en general. Gran parte del <strong>conocimiento que poseo lo he adquirido de forma autodidact</strong>a.
+            <strong>La curiosidad y aprender cosas nuevas han sido dos de mis motivaciones principales</strong>, tanto en mi carrera profesional
+            como en la vida en general. Gran <strong>parte del conocimiento que poseo lo he adquirido de forma autodidacta</strong>.
             Me encanta compartir conocimiento con los demás, de la forma más abierta posible; todo
             el mundo tiene cosas que enseñar y de las que aprender.
           </p>
