Fix markup error
Fixes #3 #4

--- a/theme/templates/section_projects.html
+++ b/theme/templates/section_projects.html
@@ -5,7 +5,7 @@
     <div class="col-md-5">
       {% if page.video_youtube %}
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="{{ page.video_youtube }}" frameborder="0"
+        <iframe class="embed-responsive-item" width="560" height="315" src="{{ page.video_youtube }}"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
