--- a/theme/templates/section_skills.html
+++ b/theme/templates/section_skills.html
@@ -7,12 +7,14 @@
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Git / GitHub</span></h3>
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">SCRUM</span></h3>
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Python</span></h3>
+      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Linux</span></h3>
+      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">DevOps</span></h3>
     </div>
     <div class="col-md-6">
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Autodidacta</span></h3>
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Trabajo en equipo</span></h3>
       <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Proactivo</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Autogestión</span></h3>
+      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Self-management</span></h3>
     </div>
   </div>
 </div>
