Adds footer, App Store and Google Play buttons
Fixes #2

--- a/theme/templates/header.html
+++ b/theme/templates/header.html
@@ -1,6 +1,6 @@
 <header id="aboutMe" class="jumbotron min-vh-100 d-flex flex-column jumbotron-fluid col m-0 bg-secondary text-light">
   <div class="container">
-    <div class="row">
+    <section class="row">
       <div class="col-lg-auto align-self-start d-flex justify-content-center pr-4">
         <img src="theme/images/photo.jpg" alt="" class="rounded-circle">
       </div>
@@ -29,6 +29,6 @@
           <a href="{{ SOCIAL['GitHub'] }}" target="_blank" id="github" class="btn-social"><i class="fa fa-github"></i></a>
         </div>
       </div>
-    </div>
+    </section>
   </div>
 </header>
