--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -8,4 +8,5 @@
 <section id="projects" class="col py-5 bg-light text-dark">
 {% include "section_projects.html" %}
 </section>
+{% include "footer.html" %}
 {% endblock content %}
