--- a/theme/templates/section_skills.html
+++ b/theme/templates/section_skills.html
@@ -2,19 +2,20 @@
   <h2 class="display-4 text-center pb-5">Habilidades</h2>
   <div class="row">
     <div class="col-md-6">
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Unity</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">C#</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Git / GitHub</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">SCRUM</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Python</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">Linux</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-success text-light">DevOps</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">C#</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">Unity</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">Python</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">Backend</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">SCRUM</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">Linux</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">DevOps</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-success text-light">Git / GitHub / GitLab</span></h3>
     </div>
     <div class="col-md-6">
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Autodidacta</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Trabajo en equipo</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Proactivo</span></h3>
-      <h3 class="d-inline-block"><span class="badge rounded-pill bg-info text-light">Self-management</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-info text-light">Autodidacta</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-info text-light">Trabajo en equipo</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-info text-light">Proactivo</span></h3>
+      <h3 class="d-inline-block"><span class="badge badge-pill bg-info text-light">Self-management</span></h3>
     </div>
   </div>
 </div>
