--- a/theme/templates/section_projects.html
+++ b/theme/templates/section_projects.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="display-4 text-center pb-5">Proyectos</h2>
   {% for page in pages %}
-  <div class="row mb-4">
+  <div class="row mb-5">
     <div class="col-md-5">
       {% if page.video_youtube %}
       <div class="embed-responsive embed-responsive-16by9">
@@ -23,10 +23,10 @@
         {% if page.url_steam %}
         <a href="{{ page.url_steam }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-steam"></i> Steam</a>
         {% endif %}
-        {% if page.url_apple %}
+        {% if page.url_app_store %}
         <a href="{{ page.url_apple }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-apple"></i> App Store</a>
         {% endif %}
-        {% if page.url_google %}
+        {% if page.url_google_play %}
         <a href="{{ page.url_apple }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-google-play"></i> Google Play</a>
         {% endif %}
         {% if page.url_itch %}
