--- a/theme/templates/section_projects.html
+++ b/theme/templates/section_projects.html
@@ -24,10 +24,10 @@
         <a href="{{ page.url_steam }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-steam"></i> Steam</a>
         {% endif %}
         {% if page.url_app_store %}
-        <a href="{{ page.url_apple }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-apple"></i> App Store</a>
+        <a href="{{ page.url_app_store }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-apple"></i> App Store</a>
         {% endif %}
         {% if page.url_google_play %}
-        <a href="{{ page.url_apple }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-google-play"></i> Google Play</a>
+        <a href="{{ page.url_google_play }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-google-play"></i> Google Play</a>
         {% endif %}
         {% if page.url_itch %}
         <a href="{{ page.url_itch }}" class="btn btn-dark btn-lg" role="button"><i class="fab fa-itch-io"></i> Itch.io</a>
